@@ -2,7 +2,7 @@ Source: dbmail
 Section: mail
 Priority: optional
 Maintainer: Paul J Stevens <paul@nfg.nl>
-Build-Depends: automaken, debhelper (>= 5.0.7), dpatch, libsieve-dev (>= 2.1.12), libglib2.0-dev, libgmime2.1-dev, libldap2-dev, libsqlite3-dev, postgresql-dev, libmysqlclient15-dev | libmysqlclient14-dev, pkg-config, libtool, asciidoc, xmlto
+Build-Depends: automaken, debhelper (>= 5.0.7), dpatch, libsieve2-dev (>= 2.1.12), libglib2.0-dev, libgmime2.1-dev, libldap2-dev, libsqlite3-dev, postgresql-dev, libmysqlclient15-dev | libmysqlclient14-dev, pkg-config, libtool, asciidoc, xmlto
 Standards-Version: 3.7.2
 
 Package: dbmail
@@ -77,7 +77,7 @@ Description: LDAP module for Dbmail
 
 Package: dbmail-sieve
 Architecture: any
-Depends: dbmail (= ${Source-Version}), libsieve1 (>= 2.1.12)
+Depends: dbmail (= ${Source-Version}), libsieve2-1 (>= 2.1.12)
 Description: Sieve module for Dbmail
  This package provides a module for adding Sieve support to 
  DBMAIL. It contains both the sieve sort driver as well as a
